--- a/Plugin/TaskPlugDLL/TaskPlugDLL.dproj
+++ b/Plugin/TaskPlugDLL/TaskPlugDLL.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>TaskPlugDLL.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Library</AppType>
@@ -66,8 +66,8 @@
         <DCC_UsePackage>DBXSqliteDriver;RESTComponents;DataSnapServerMidas;DBXInterBaseDriver;emsclientfiredac;DataSnapFireDAC;tethering;FireDACMSSQLDriver;bindcompfmx;DBXOracleDriver;inetdb;FmxTeeUI;emsedge;FireDACIBDriver;fmx;fmxdae;FireDACDBXDriver;dbexpress;IndyCore;dsnap;DataSnapCommon;emsclient;FireDACCommon;RESTBackendComponents;soapserver;bindengine;DBXMySQLDriver;FireDACOracleDriver;CloudService;FireDACMySQLDriver;DBXFirebirdDriver;FireDACCommonODBC;FireDACCommonDriver;DataSnapClient;inet;bindcompdbx;IndyIPCommon;IndyIPServer;IndySystem;fmxFireDAC;FireDAC;emshosting;FireDACSqliteDriver;FireDACPgDriver;ibmonitor;FireDACASADriver;FireDACTDataDriver;FMXTee;soaprtl;DbxCommonDriver;ibxpress;DataSnapServer;xmlrtl;soapmidas;DataSnapNativeClient;fmxobj;ibxbindings;rtl;FireDACDSDriver;DbxClientDriver;DBXSybaseASADriver;CustomIPTransport;bindcomp;DBXInformixDriver;IndyIPClient;dbxcds;FireDACODBCDriver;DataSnapIndy10ServerTransport;dsnapxml;DataSnapProviderClient;dbrtl;inetdbxpress;FireDACMongoDBDriver;IndyProtocols;fmxase;$(DCC_UsePackage)</DCC_UsePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <DCC_ExeOutput>.\..\..\..\..\bin\WebHttpServer</DCC_ExeOutput>
-        <DCC_DcuOutput>.\..\..\..\..\temp</DCC_DcuOutput>
+        <DCC_ExeOutput>.\..\..\bin</DCC_ExeOutput>
+        <DCC_DcuOutput>.\..\..\temp</DCC_DcuOutput>
         <UsePackages>true</UsePackages>
         <Manifest_File>(None)</Manifest_File>
         <VerInfo_Locale>1033</VerInfo_Locale>
@@ -90,8 +90,8 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_UsePackage>vcl;rtl</DCC_UsePackage>
         <Debugger_HostApplication>E:\JXSOFTWORK\JxManagerrProject\PeriodAppSystem\bin\WebHttpServer\PrjWebHttpServer.exe</Debugger_HostApplication>
-        <DCC_DcuOutput>.\..\..\..\..\temp</DCC_DcuOutput>
-        <DCC_ExeOutput>.\..\..\..\..\bin\WebHttpServer</DCC_ExeOutput>
+        <DCC_DcuOutput>.\..\..\temp</DCC_DcuOutput>
+        <DCC_ExeOutput>.\..\..\bin</DCC_ExeOutput>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
