--- a/Host/RPMPServer.dproj
+++ b/Host/RPMPServer.dproj
@@ -139,6 +139,10 @@
         <DCCReference Include="..\Public\Intf_MsConnectionPool.pas"/>
         <DCCReference Include="..\Public\MsDataBasePool.pas"/>
         <DCCReference Include="uPubHttpServer.pas"/>
+        <DCCReference Include="UpdatePlug.pas">
+            <Form>frmUpdatePlug</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -192,7 +196,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="..\..\..\bin\WebHttpServer\RPMPServer.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\bin\RPMPServer.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>RPMPServer.exe</RemoteName>
                         <Overwrite>true</Overwrite>
